*** empty log message ***

--- a/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
@@ -52,3 +52,7 @@ AGDTCE00230=:Criteria: Could not create SQL for Criteria.
 
 AGDTCE00240=:Return: Could not create Return element.
 AGDTCE00250=:Return: Could not create SQL for Return.
+
+AGDTCE00300=:Allocation: An error was returned from MySpaceManager. Status: {0}. Details: {1}
+AGDTCE00310=:Allocation: Axis returned a fault when invoking MySpaceManager.
+AGDTCEOO32O=:Allocation: Failed to parse response document returned from MySpaceManager.
