--- a/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
@@ -68,20 +68,35 @@ VOTABLEFACTORY=org.astrogrid.datacenter.impl.VOTableFactoryImpl
 # for co-operating with the MySpace facility. However, here is how
 # the astrogrid implementation is loaded...
 #
-MYSPACEFACTORY=org.astrogrid.datacenter.impl.MySpaceFactoryImpl
+MYSPACE.FACTORY=org.astrogrid.datacenter.impl.MySpaceFactoryImpl
 
 #
 # Local directory where temporary files associated with the MySpace facility 
 # can be created (e.g. for the purposes of holding a votable to be ftp'd to MySpace).
 # The format is operating system dependent and can be a relative- or a fully-
 # qualified path.
-MYSPACECACHE_DIRECTORY=tmp
+MYSPACE.CACHE_DIRECTORY=tmp
 
 #
 # This is the URL for the MySpace facility closest and most convenient
 # for this datacenter...
 #
-MYSPACE.URL=www.star.le.ac.uk/MySpace
+MYSPACE.MANAGER.URL=www.star.le.ac.uk/MySpace
+
+#
+# MySpace request template
+#
+MYSPACE.MANAGER.REQUEST_TEMPLATE= \
+<?xml version='1.0' encoding='UTF-8'?> \
+<request> \
+    <elements> \
+        <userID>{0}</userID> \
+        <communityID>{1}</communityID> \
+        <jobID>{2}</jobID> \
+        <fileLocation>{3}</fileLocation> \
+    </elements> \
+</request> 
+
 
 #
 # A job factory and database is required of each datacenter
@@ -166,3 +181,4 @@ USNOB.TABLEB.B1STAR=B1STAR
 USNOB.TABLEB.R1STAR=R1STAR
 USNOB.TABLEB.B2STAR=B2STAR
 USNOB.TABLEB.R2STAR=R2STAR
+
