*** empty log message ***

--- a/astrogrid/mySpace/schema/MySpaceManagerRequest.properties
+++ b/astrogrid/mySpace/schema/MySpaceManagerRequest.properties
@@ -5,7 +5,13 @@ MYSPACEMANAGER_REQUEST= \
         <userID>{0}</userID> \
         <communityID>{1}</communityID> \
         <jobID>{2}</jobID> \
-        <fileLocation>{3}</fileLocation> \
+        <mySpaceAction>{3}</mySpaceAction>
+        <fileLocation>{4}</fileLocation> \
+        <currentTime>{5}</currentTime> \
+        <copyFrom>{6}</copyFrom> \
+        <copyTo>{7}</copyTo> \
+        <moveFrom>{8}</moveFrom> \
+        <moveTo>{9}</movetTo> \
     </elements> \
 </request> \
 
