--- a/astrogrid/mySpace/schema/MySpaceManagerResponse.properties
+++ b/astrogrid/mySpace/schema/MySpaceManagerResponse.properties
@@ -8,10 +8,10 @@ MYSPACEMANAGER_RESPONSE= \
     <elements> \
         <dataItemName>{2}</dataItemName> \
         <dataItemID>{3}</dataItemID> \
-        <dataItemFile>{4}</dataItemFile> \
-        <ownerID>{5}</ownerID> \
-        <creationDate>{6}</creationDate> \
-        <expiryDate>{7}</expiryDate> \
+        <ownerID>{4}</ownerID> \
+        <creationDate>{5}</creationDate> \
+        <expiryDate>{6}</expiryDate> \
+        <currentDate>{7}</currentDate> \
         <size>{8}</size> \
         <type>{9}</type> \
         <permissionsMask>{10}</permissionsMask> \
