*** empty log message ***

--- a/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
@@ -4,7 +4,7 @@
 # Format of the message key: AGDTCEnnnnn
 # AG       AstroGrid
 # DTC      DaTaCenter
-# E/W/I/Z  E = error,  W = warning  I = information  Z = error messages with text hard coded in program
+# E/W/I/Z  E = error,  W = warning  I = information  Z = error messages with text hard coded in program (invariably fatal)
 # nnnnn    unique message number
 #
 # Format of the message body:
@@ -40,6 +40,7 @@ AGDTCE00150=:JobFactory: Could not create Job datasource {0}
 AGDTCE00160=:JobFactory: Could not create connection to Job datasource.
 AGDTCE00170=:JobFactory: Unable to create Job from request document. 
 AGDTCE00180=:Job: Unable to create Job from request document
+AGDTCE00185=:Job: Axis returned a fault when invoking the JobMonitor.
 AGDTCE00190=:JobFactory: Unable to update Job with jobid {0}
 AGDTCE00192=:JobFactory: Unable to find Job with jobid {0}
 AGDTCE00194=:JobFactory: Unable to delete Job with jobid {0}
