--- a/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
@@ -106,6 +106,17 @@ JOB.FACTORY=org.astrogrid.datacenter.impl.JobFactoryImpl
 JOB.DATASOURCE=java:comp/env/jdbc/job
 JOB.TABLENAME=JOB
 
+
+#
+# JobMonitor request template
+#
+JOB.MONITOR.REQUEST_TEMPLATE= \
+<?xml version = "1.0" encoding = "UTF8"?> \
+<job name="{0}" userid="{1}" community="{2}" jobURN="{3}" time="{4}" > \
+   <jobstep name="{5}" stepNumber="{6}" status="{7}"/> \
+</job>
+
+
 #
 # Catalog specific UCD to Column Headings mappings go here. The format is:
 # <catalog-name>.<table-name>.<UCD>=<value>
