changed tags according to new MySpaceAction.

--- a/astrogrid/mySpace/schema/MySpaceManagerRequest.properties
+++ b/astrogrid/mySpace/schema/MySpaceManagerRequest.properties
@@ -5,13 +5,14 @@ MYSPACEMANAGER_REQUEST= \
         <userID>{0}</userID> \
         <communityID>{1}</communityID> \
         <jobID>{2}</jobID> \
-        <mySpaceAction>{3}</mySpaceAction>
-        <fileLocation>{4}</fileLocation> \
-        <currentTime>{5}</currentTime> \
-        <copyFrom>{6}</copyFrom> \
-        <copyTo>{7}</copyTo> \
-        <moveFrom>{8}</moveFrom> \
-        <moveTo>{9}</movetTo> \
+        <mySpaceAction>{3}</mySpaceAction> \
+        <dataItemID>{4}</dataItemID> \
+        <fileLocation>{5}</fileLocation> \
+        <currentDate>{6}</currentDate> \
+        <oldDataItemID>{7}</oldDataItemID> \
+        <newDataItemName>{8}</newDataItemName> \
+        <newContainerName>{9}</newContainerName> \
+        <query>{10}</query> \
     </elements> \
 </request> \
 
