changed tags according to the MySpaceAction.

--- a/astrogrid/mySpace/schema/MySpaceManagerResponse.properties
+++ b/astrogrid/mySpace/schema/MySpaceManagerResponse.properties
@@ -5,7 +5,8 @@ MYSPACEMANAGER_RESPONSE= \
         <status>{0}</status> \
         <details>{1}</details> \
     </status> \
-    <elements> \
+    <dataItemRecords> \
+      <dataItemRecord> \
         <dataItemName>{2}</dataItemName> \
         <dataItemID>{3}</dataItemID> \
         <ownerID>{4}</ownerID> \
@@ -15,5 +16,6 @@ MYSPACEMANAGER_RESPONSE= \
         <size>{8}</size> \
         <type>{9}</type> \
         <permissionsMask>{10}</permissionsMask> \
-    </elements> \
+      </dataItemRecord> \
+    </dataItemRecords> \
 </results>
