*** empty log message ***

--- a/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
@@ -40,7 +40,7 @@ AGDTCE00150=:JobFactory: Could not create Job datasource {0}
 AGDTCE00160=:JobFactory: Could not create connection to Job datasource.
 AGDTCE00170=:JobFactory: Unable to create Job from request document. 
 AGDTCE00180=:Job: Unable to create Job from request document
-AGDTCE00185=:Job: Axis returned a fault when invoking the JobMonitor.
+AGDTCE00185=:Job: Error when invoking the JobMonitor.
 AGDTCE00190=:JobFactory: Unable to update Job with jobid {0}
 AGDTCE00192=:JobFactory: Unable to find Job with jobid {0}
 AGDTCE00194=:JobFactory: Unable to delete Job with jobid {0}
@@ -55,5 +55,5 @@ AGDTCE00240=:Return: Could not create Return element.
 AGDTCE00250=:Return: Could not create SQL for Return.
 
 AGDTCE00300=:Allocation: An error was returned from MySpaceManager. Status: {0}. Details: {1}
-AGDTCE00310=:Allocation: Axis returned a fault when invoking MySpaceManager.
+AGDTCE00310=:Allocation: Error when invoking MySpaceManager.
 AGDTCEOO32O=:Allocation: Failed to parse response document returned from MySpaceManager.
