--- a/astrogrid/jes/config/ASTROGRID_jesconfig.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesconfig.properties
@@ -71,6 +71,11 @@ SUBMIT_JOB_RESPONSE.TEMPLATE= /
 SCHEDULER.URL=http://hydra.star.le.ac.uk/astrogrid/services/SchedulerService	 
 
 #
+# Location of our JobMonitor
+#	 
+MONITOR.URL=http://hydra.star.le.ac.uk/astrogrid/services/MonitorService	 
+
+#
 # Schedule Job Request Template
 #
 SCHEDULE_JOB_REQUEST.TEMPLATE= /
