--- a/astrogrid/jes/config/ASTROGRID_jesmessages.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesmessages.properties
@@ -35,3 +35,7 @@ AGJESE00320=:JobFactory: Failed to close connection to Job datasource.
 AGJESE00400=:JobController: Failed to format response message.
 AGJESE00410=:JobController: Failed to inform job scheduler.
 AGJESE00420=:JobController: Failed to format job schedule request.
+
+AGJESE00500=:JobScheduler: Job scheduling ultimately failed. See previous messages.
+AGJESE00510=:JobScheduler: Failed to format datacenter run request.
+AGJESE00520=:JobScheduler: Failed to contact datacenter.
