--- a/astrogrid/old-portal/build.xml
+++ b/astrogrid/old-portal/build.xml
@@ -2,10 +2,13 @@
 <!--
     | <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/old-portal/Attic/build.xml,v $</cvs:source>
     | <cvs:date>$Author: dave $</cvs:date>
-    | <cvs:author>$Date: 2003/06/10 11:21:09 $</cvs:author>
-    | <cvs:version>$Revision: 1.11 $</cvs:version>
+    | <cvs:author>$Date: 2003/06/10 11:31:24 $</cvs:author>
+    | <cvs:version>$Revision: 1.12 $</cvs:version>
     | <cvs:log>
     | $Log: build.xml,v $
+    | Revision 1.12  2003/06/10 11:31:24  dave
+    | ÂSplit the MySpace service INSTALL into client and server
+    |
     | Revision 1.11  2003/06/10 11:21:09  dave
     | Fixed BeanMapping namespace in mock MySpace WSDD
     |
@@ -1095,23 +1098,24 @@
 		<antcall target="myspace.client.delete"/>
 	</target>
 
-	<!-- Rebuild our mock MySpace service -->
-	<target name="myspace.INSTALL" depends="">
-
+	<!-- Install our mock MySpace service -->
+	<target name="myspace.service.INSTALL" depends="">
 		<!-- Compile the server side code -->
 		<antcall target="myspace.service.java.compile"/>
 		<!-- Test the server side code (offline) -->
 		<antcall target="myspace.service.test.junit"/>
 		<!-- Install the server side code -->
 		<antcall target="myspace.service.install"/>
+	</target>
 
+	<!-- Install our mock MySpace client -->
+	<target name="myspace.client.BUILD" depends="">
 		<!-- Build the client side stubs -->
 		<antcall target="myspace.client.wsdl2java"/>
 		<!-- Compile the client side java -->
 		<antcall target="myspace.client.build.java"/>
 		<!-- Test the client side code (online) -->
 		<antcall target="myspace.client.test.junit"/>
-
 	</target>
 
 </project>
