--- a/astrogrid/jes/config/ASTROGRID_jesconfig.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesconfig.properties
@@ -53,16 +53,16 @@ SERVICE.TABLENAME=SERVICE
 #
 # Submit Job Response Template
 #
-SUBMIT_JOB_RESPONSE.TEMPLATE= /
-<?xml version = '1.0' encoding = 'UTF8'?> /
-<response> /
-   <job> /
-	  <userid>{0}</userid> /
-	  <community>{1}</community> /
-	  <time>{2}</time> /
-	  <jobid>{3}</jobid> /
-   </job> /
-   <message>{4}</message> /
+SUBMIT_JOB_RESPONSE.TEMPLATE= \
+<?xml version = '1.0' encoding = 'UTF8'?> \
+<response> \
+   <job> \
+	  <userid>{0}</userid> \
+	  <community>{1}</community> \
+	  <time>{2}</time> \
+	  <jobid>{3}</jobid> \
+   </job> \
+   <message>{4}</message> \
 </response>
 
 #
@@ -71,24 +71,49 @@ SUBMIT_JOB_RESPONSE.TEMPLATE= /
 SCHEDULER.URL=http://hydra.star.le.ac.uk/astrogrid/services/SchedulerService	 
 
 #
+# Schedule Job Request Template
+#
+SCHEDULE_JOB_REQUEST.TEMPLATE= \
+<?xml version = '1.0' encoding = 'UTF8'?> \
+<job name='{0}'> \
+   <userid>{1}</userid> \
+   <community>{2}</community> \
+   <time>{3}</time> \
+   <jobid>{4}</jobid> \
+</job> 
+
+#
 # Location of our JobMonitor
 #	 
 MONITOR.URL=http://hydra.star.le.ac.uk/astrogrid/services/MonitorService	 
 
-#
-# Schedule Job Request Template
-#
-SCHEDULE_JOB_REQUEST.TEMPLATE= /
-<?xml version = '1.0' encoding = 'UTF8'?> /
-<job name='{0}'> /
-   <userid>{1}</userid> /
-   <community>{2}</community> /
-   <time>{3}</time> /
-   <jobid>{4}</jobid> /
-</job> /
 
+#
+# Location of our AstroGridMessageLog
+#	 
+ASTROGRID_MESSAGE_LOG.URL=http://hydra.star.le.ac.uk/astrogrid/services/????	 	 
 	 
-	 
+#
+# AstroGridMessageLog Request Template
+#
+ASTROGRID_MESSAGE_LOG_REQUEST.TEMPLATE = \	 
+<?xml version="1.0"?> \
+<agr:message \
+  xmlns:agr="http://www.astrogrid.org/registry" \
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" \
+  xsi:schemaLocation="http://www.astrogrid.org/registry astrogrid-messaging.xsd"> \ 
+  <agr:log> \
+    <agr:sourceAddress>{0}</agr:sourceAddress> \
+    <agr:destinationAddress>{1}</agr:destinationAddress> \
+    <agr:timestamp>{2}</agr:timestamp> \
+    <agr:subject>{3}</agr:subject> \
+    <agr:content> \
+      <agr:paragraph> \
+         {4} \
+      </agr:paragraph> \
+    </agr:content> \
+  </agr:log> \
+</agr:message>
 	 
 	 
 	 
