*** empty log message ***

--- a/astrogrid/mySpace/schema/MySpaceManagerRequest.properties
+++ b/astrogrid/mySpace/schema/MySpaceManagerRequest.properties
@@ -8,11 +8,13 @@ MYSPACEMANAGER_REQUEST= \
         <mySpaceAction>{3}</mySpaceAction> \
         <dataItemID>{4}</dataItemID> \
         <fileLocation>{5}</fileLocation> \
-        <currentDate>{6}</currentDate> \
         <oldDataItemID>{7}</oldDataItemID> \
         <newDataItemName>{8}</newDataItemName> \
         <newContainerName>{9}</newContainerName> \
         <query>{10}</query> \
+        <newDataHolderName>{11}</newDataHolderName>\
+        <serverFileName>{12}</serverFileName> \
+        <fileSize>{13}</fileSize> \
     </elements> \
 </request> \
 
