--- a/astrogrid/mySpace/schema/MySpaceManagerResponse.properties
+++ b/astrogrid/mySpace/schema/MySpaceManagerResponse.properties
@@ -4,18 +4,19 @@ MYSPACEMANAGER_RESPONSE= \
     <status> \
         <status>{0}</status> \
         <details>{1}</details> \
+        <currentDate>{2}</currentDate> \
     </status> \
     <dataItemRecords> \
       <dataItemRecord> \
-        <dataItemName>{2}</dataItemName> \
-        <dataItemID>{3}</dataItemID> \
-        <ownerID>{4}</ownerID> \
-        <creationDate>{5}</creationDate> \
-        <expiryDate>{6}</expiryDate> \
-        <currentDate>{7}</currentDate> \
+        <dataItemName>{3}</dataItemName> \
+        <dataItemID>{4}</dataItemID> \
+        <ownerID>{5}</ownerID> \
+        <creationDate>{6}</creationDate> \
+        <expiryDate>{7}</expiryDate> \
         <size>{8}</size> \
         <type>{9}</type> \
         <permissionsMask>{10}</permissionsMask> \
+        <dataHolderURI>{11}</dataHolderURI> \
       </dataItemRecord> \
     </dataItemRecords> \
 </results>
