*** empty log message ***

--- a/astrogrid/jes/config/ASTROGRID_jesconfig.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesconfig.properties
@@ -115,9 +115,19 @@ ASTROGRID_MESSAGE_LOG_REQUEST.TEMPLATE = \
   </agr:log> \
 </agr:message>
 	 
-	 
-	 
-	 
+#
+# Location of Registry
+#	 
+ASTROGRID_REGISTRY.URL=http://hydra.star.le.ac.uk/astrogrid/services/????	 	 	 
+
+#
+# AstroGrid Registry Request Template
+#
+ASTROGRID_REQUISTRY_REQUEST.TEMPLATE = \	 	 
+<?xml version="1.0" encoding="UTF-8"?> \
+<jobSchedulerQuery> \
+{0} \
+</jobSchedulerQuery>
 	 
 	 
 	 
