--- a/astrogrid/jes/config/ASTROGRID_jesmessages.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesmessages.properties
@@ -4,7 +4,7 @@
 # Format of the message key: AGJESEnnnnn
 # AG       AstroGrid
 # JES      Job Entry System
-# E/W/I/Z  E = error,  W = warning  I = information  Z = error messages with text hard coded in program
+# E/W/I/Z  E = error,  W = warning  I = information  Z = error messages with text hard coded in program (fatal)
 # nnnnn    unique message number
 #
 # Format of the message body:
@@ -35,7 +35,16 @@ AGJESE00320=:JobFactory: Failed to close connection to Job datasource.
 AGJESE00400=:JobController: Failed to format response message.
 AGJESE00410=:JobController: Failed to inform job scheduler.
 AGJESE00420=:JobController: Failed to format job schedule request.
+AGJESE00430=:JobMonitor: Failed to format job schedule request.
+AGJESE00440=:JobMonitor: Failed to inform job scheduler.
 
+AGJESE00490=:JobScheduler: Failed to parse job schedule request.
 AGJESE00500=:JobScheduler: Job scheduling ultimately failed. See previous messages.
 AGJESE00510=:JobScheduler: Failed to format datacenter run request.
 AGJESE00520=:JobScheduler: Failed to contact datacenter.
+
+AGJESE00530=:JobMonitor: Job monitoring ultimately failed. See previous messages.
+AGJESE00540=:JobMonitor: Failed to parse job monitoring request.
+AGJESE00550=:JobMonitor: Failed to contact AstroGrid message log.
+
+AGJESE00600=:Criteria: Could not create Criteria from given element.
