*** empty log message ***

--- a/astrogrid/jes/config/ASTROGRID_jesconfig.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesconfig.properties
@@ -85,8 +85,13 @@ SCHEDULE_JOB_REQUEST.TEMPLATE= \
 #
 # Location of our JobMonitor
 #	 
-MONITOR.URL=http://hydra.star.le.ac.uk/astrogrid/services/MonitorService	 
+MONITOR.URL=http://hydra.star.le.ac.uk/astrogrid/services/JobMonitorService	 
 
+
+#
+# Location of our JobController
+#	 
+CONTROLLER.URL=http://hydra.star.le.ac.uk/astrogrid/services/JobControllerService	 
 
 #
 # Location of our AstroGridMessageLog
