--- a/astrogrid/jes/config/ASTROGRID_jesmessages.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesmessages.properties
@@ -22,7 +22,9 @@ AGJESZ00005=AGJESZ00005:Message: Message not found in ResourceBundle
 
 AGJESE00030=:JobController: Failed to parse Job Submission Request.
 AGJESE00040=:JobController: Job submission ultimately failed. See previous messages.
-AGJESI00050=:JobController: Job successfully submitted. 
+AGJESI00050=:JobController: Job successfully submitted.
+AGJESE00060=:JobController: Failed to contact AstroGrid message log. 
+AGJESI00070=:JobController: Job status [{0}] job name [{1}] userid [{2}] community [{3}] job id [{4}] 
 
 AGJESE00140=:Job: Could not create JobFactory {0}
 AGJESE00150=:JobFactory: Could not create Job datasource {0}
@@ -46,5 +48,8 @@ AGJESE00520=:JobScheduler: Failed to contact datacenter.
 AGJESE00530=:JobMonitor: Job monitoring ultimately failed. See previous messages.
 AGJESE00540=:JobMonitor: Failed to parse job monitoring request.
 AGJESE00550=:JobMonitor: Failed to contact AstroGrid message log.
+AGJESI00560=:JobMonitor: Job status [{0}] job name [{1}] userid [{2}] community [{3}] job id [{4}] step name [{5}] \
+step number [{6}] step status [{7}] step message [{8}]
 
 AGJESE00600=:Criteria: Could not create Criteria from given element.
+
