example for datacentre calling upLoad.

--- a/astrogrid/mySpace/schema/MySpaceManagerRequest.properties
+++ b/astrogrid/mySpace/schema/MySpaceManagerRequest.properties
@@ -2,28 +2,17 @@ MYSPACEMANAGER_REQUEST= \
 <?xml version='1.0' encoding='UTF-8'?> \
 <request> \
     <elements> \
-        <userID>{0}</userID> \
-        <communityID>{1}</communityID> \
-        <jobID>{2}</jobID> \
-        <mySpaceAction>{3}</mySpaceAction> \
-        <dataItemID>{4}</dataItemID> \
-        <oldDataItemID>{5}</oldDataItemID> \
+        <userID>clq</userID> \
+        <communityID>Leicester</communityID> \
+        <jobID>jobID1</jobID> \
+        <mySpaceAction>upLoad</mySpaceAction> \
+        <dataItemID>10</dataItemID> \
+        <oldDataItemID>10</oldDataItemID> \
         <newDataItemName>{6}</newDataItemName> \
         <newContainerName>{7}</newContainerName> \
         <query>{8}</query> \
-        <newDataHolderName>{9}</newDataHolderName>\
-        <serverFileName>{10}</serverFileName> \
-        <fileSize>{11}</fileSize> \
+        <newDataHolderName>/clq/serv1/table1</newDataHolderName>\
+        <serverFileName>/tmp/test1</serverFileName> \
+        <fileSize>10</fileSize> \
     </elements> \
 </request> \
-
-
-
-
-
-
-
-
-
-
-
