*** empty log message ***

--- a/astrogrid/jes/config/ASTROGRID_jesconfig.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesconfig.properties
@@ -38,7 +38,7 @@ PARSER.VALIDATION=false
 # A job factory and database is required of each JES
 #
 JOB.FACTORY=org.astrogrid.jes.impl.JobFactoryImpl
-JOB.DATASOURCE=java:comp/env/job-datasource
+JOB.DATASOURCE=java:comp/env/jes-datasource
 
 #
 # The table names for the job database
