*** empty log message ***

--- a/astrogrid/jes/config/ASTROGRID_jesconfig.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesconfig.properties
@@ -47,7 +47,7 @@ JOB.TABLENAME=JOB
 JOBSTEP.TABLENAME=JOBSTEP
 QUERY.TABLENAME=QUERY
 CATALOG.TABLENAME=CATALOG
-TABLE.TABLENAME=TABLE
+TABLE.TABLENAME=CATALOGTABLE
 SERVICE.TABLENAME=SERVICE
 
 #
