--- a/astrogrid/jes/config/ASTROGRID_jesmessages.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesmessages.properties
@@ -14,7 +14,7 @@
 # Note Z style messages (e.g. AGJESZ00001) are included here for documentary purposes only.
 #
 
-AGJESZ00001=AGJESZ00001:<jes-component-name>: Could not read my configuration file {0}
+AGJESZ00001=AGJESZ00001:<jes-component-name>: Could not read my configuration file [{0}]
 AGJESZ00002=AGJESZ00002:<jes-component-name>: Not initialized. Perhaps my configuration file is missing.
 AGJESZ00003=AGJESZ00003:Message: Message key is null.
 AGJESZ00004=AGJESZ00004:Message: Message pattern or inserts are invalid
@@ -26,8 +26,8 @@ AGJESI00050=:JobController: Job successfully submitted.
 AGJESE00060=:JobController: Failed to contact AstroGrid message log. 
 AGJESI00070=:JobController: Job status [{0}] job name [{1}] userid [{2}] community [{3}] job id [{4}] 
 
-AGJESE00140=:Job: Could not create JobFactory {0}
-AGJESE00150=:JobFactory: Could not create Job datasource {0}
+AGJESE00140=:Job: Could not create JobFactory [{0}]
+AGJESE00150=:JobFactory: Could not create Job datasource [{0}]
 AGJESE00160=:JobFactory: Could not create connection to Job datasource.
 
 AGJESE00300=:JobFactory: Failure to commit changes to Job datasource.
@@ -51,5 +51,17 @@ AGJESE00550=:JobMonitor: Failed to contact AstroGrid message log.
 AGJESI00560=:JobMonitor: Job status [{0}] job name [{1}] userid [{2}] community [{3}] job id [{4}] step name [{5}] \
 step number [{6}] step status [{7}] step message [{8}]
 
-AGJESE00600=:Criteria: Could not create Criteria from given element.
+AGJESE00600=:Catalog: Could not create Catalog from given element.
+AGJESE00610=:Query: Could not create Query from given element.
+AGJESE00620=:Table: Could not create Table from given element.
+AGJESE00630=:Service: Could not create Service from given element.
 
+AGJESE00700=:JobFactoryImpl: Duplicate Job found - Job URN [{0}]
+AGJESE00710=:JobFactoryImpl: Job not found - Job URN [{0}]
+AGJESE00720=:JobFactoryImpl: Jobs not found - with criteria [{0}]
+AGJESE00730=:JobFactoryImpl: JobStep not found for Job with URN [{0}]
+AGJESE00740=:JobFactoryImpl: Duplicate Query found - Job URN [{0}] and JobStep number [{1}]
+AGJESE00750=:JobFactoryImpl: Query not found for Job with URN [{0}] and JobStep number [{1}]
+AGJESE00760=:JobFactoryImpl: Catalog not found for Query in Job with Job URN [{0}] and JobStep number [{1}]
+AGJESE00770=:JobFactoryImpl: Table not found for Catalog [{0}] in Job with Job URN [{1}] and JobStep number [{2}]
+AGJESE00780=:JobFactoryImpl: Service not found for Catalog [{0}] in Job with Job URN [{1}] and JobStep number [{2}]
