*** empty log message ***

--- a/astrogrid/jes/config/ASTROGRID_jesconfig.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesconfig.properties
@@ -68,7 +68,7 @@ SUBMIT_JOB_RESPONSE.TEMPLATE= \
 #
 # Location of our JobScheduler
 #	 
-SCHEDULER.URL=http://hydra.star.le.ac.uk/axis/services/JobSchedulerService	 
+SCHEDULER.URL=http://hydra.star.le.ac.uk:8080/axis/services/JobSchedulerService	 
 
 #
 # Schedule Job Request Template
@@ -85,17 +85,17 @@ SCHEDULE_JOB_REQUEST.TEMPLATE= \
 #
 # Location of our JobMonitor
 #	 
-MONITOR.URL=http://hydra.star.le.ac.uk/axis/services/JobMonitorService	 
+MONITOR.URL=http://hydra.star.le.ac.uk:8080/axis/services/JobMonitorService	 
 
 #
 # Location of our JobController
 #	 
-CONTROLLER.URL=http://hydra.star.le.ac.uk/axis/services/JobControllerService	 
+CONTROLLER.URL=http://hydra.star.le.ac.uk:8080/axis/services/JobControllerService	 
 
 #
 # Location of our AstroGridMessageLog
 #	 
-ASTROGRID_MESSAGE_LOG.URL=http://hydra.star.le.ac.uk/axis/services/????	 	 
+ASTROGRID_MESSAGE_LOG.URL=http://hydra.star.le.ac.uk:8080/axis/services/????	 	 
 	 
 #
 # AstroGridMessageLog Request Template
@@ -122,7 +122,7 @@ ASTROGRID_MESSAGE_LOG_REQUEST.TEMPLATE = \
 #
 # Location of Registry
 #	 
-ASTROGRID_REGISTRY.URL=http://hydra.star.le.ac.uk/axis/services/????	 	 	 
+ASTROGRID_REGISTRY.URL=http://hydra.star.le.ac.uk:8080/axis/services/????	 	 	 
 
 #
 # AstroGrid Registry Request Template
@@ -132,9 +132,6 @@ ASTROGRID_REQUISTRY_REQUEST.TEMPLATE = \
 <jobSchedulerQuery> \
 {0} \
 </jobSchedulerQuery>
-	 
-	 
-	 
 	 
 	 
 	 
