*** empty log message ***

--- a/astrogrid/jes/config/ASTROGRID_jesmessages.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesmessages.properties
@@ -29,6 +29,7 @@ AGJESI00070=:JobController: Job status [{0}] job name [{1}] userid [{2}] communi
 AGJESE00140=:Job: Could not create JobFactory [{0}]
 AGJESE00150=:JobFactory: Could not create Job datasource [{0}]
 AGJESE00160=:JobFactory: Could not create connection to Job datasource.
+AGJESE00170=:JobFactory: Could not create Job from request document.
 
 AGJESE00300=:JobFactory: Failure to commit changes to Job datasource.
 AGJESE00310=:JobFactory: Failure in rolling back changes to Job datasource.
@@ -65,3 +66,5 @@ AGJESE00750=:JobFactoryImpl: Query not found for Job with URN [{0}] and JobStep 
 AGJESE00760=:JobFactoryImpl: Catalog not found for Query in Job with Job URN [{0}] and JobStep number [{1}]
 AGJESE00770=:JobFactoryImpl: Table not found for Catalog [{0}] in Job with Job URN [{1}] and JobStep number [{2}]
 AGJESE00780=:JobFactoryImpl: Service not found for Catalog [{0}] in Job with Job URN [{1}] and JobStep number [{2}]
+AGJESE00790=:JobFactoryImpl: Unable to complete find request. 
+AGJESE00800=:JobFactoryImpl: Unable to complete update request.
