config file updataed

--- a/astrogrid/mySpace/conf/astrogrid/mySpace/MSResponseElements.properties
+++ b/astrogrid/mySpace/conf/astrogrid/mySpace/MSResponseElements.properties
@@ -1,4 +1,4 @@
-<dataItemRecord> \
+MYSPACEMANAGER_D_ELEMENT=<dataItemRecord> \
         <dataItemName>{0}</dataItemName> \
         <dataItemID>{1}</dataItemID> \
         <ownerID>{2}</ownerID> \
