--- a/astrogrid/mySpace/conf/astrogrid/mySpace/example.config
+++ b/astrogrid/mySpace/conf/astrogrid/mySpace/example.config
@@ -17,5 +17,5 @@ expiryperiod 35   # expiry period in days.
 # server its name, base URI and base directory are given, in that order.
 # Each item must be separated by one or more spaces. 
 
-server serv1  http://www.blue.nowhere.org/s1  /base/direct/s1/
-server serv2  http://www.blue.nowhere.org/s2  /base/direct/s2/
+server serv1  /tmp/  /tmp/mySpaceTest/
+server serv2  /tmp/  /tmp/mySpaceTest/
