*** empty log message ***

--- a/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
@@ -81,7 +81,7 @@ MYSPACE.CACHE_DIRECTORY=tmp
 # This is the URL for the MySpace facility closest and most convenient
 # for this datacenter...
 #
-MYSPACE.MANAGER.URL=www.star.le.ac.uk/MySpace
+MYSPACE.MANAGER.URL=http://hydra.star.le.ac.uk:8080/axis/services/MySpaceManager
 
 #
 # MySpace request template
