--- a/astrogrid/jes/config/ASTROGRID_jesconfig.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesconfig.properties
@@ -75,7 +75,7 @@ SCHEDULER.URL=http://hydra.star.le.ac.uk:8080/axis/services/JobSchedulerService
 #
 SCHEDULE_JOB_REQUEST.TEMPLATE= \
 <?xml version = '1.0' encoding = 'UTF8'?> \
-<job name='{0}'> \
+<job name=''{0}''> \
    <userid>{1}</userid> \
    <community>{2}</community> \
    <time>{3}</time> \
@@ -95,13 +95,13 @@ CONTROLLER.URL=http://hydra.star.le.ac.uk:8080/axis/services/JobControllerServic
 #
 # Location of our AstroGridMessageLog
 #	 
-ASTROGRID_MESSAGE_LOG.URL=http://hydra.star.le.ac.uk:8080/axis/services/????	 	 
+ASTROGRID_MESSAGE_LOG.URL=http://?.?.?.?/astromessaging/services/WSDLMessagingService	 	 
 	 
 #
 # AstroGridMessageLog Request Template
 #
 ASTROGRID_MESSAGE_LOG_REQUEST.TEMPLATE = \	 
-<?xml version="1.0"?> \
+<?xml version = '1.0' encoding = 'UTF8'?> \
 <agr:message \
   xmlns:agr="http://www.astrogrid.org/registry" \
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" \
@@ -127,11 +127,14 @@ ASTROGRID_REGISTRY.URL=http://hydra.star.le.ac.uk:8080/axis/services/????
 #
 # AstroGrid Registry Request Template
 #
-ASTROGRID_REQUISTRY_REQUEST.TEMPLATE = \	 	 
-<?xml version="1.0" encoding="UTF-8"?> \
+ASTROGRID_REGISTRY_REQUEST.TEMPLATE = \	 	 
+<?xml version = '1.0' encoding = 'UTF8'?> \
 <jobSchedulerQuery> \
 {0} \
 </jobSchedulerQuery>
+	 
+	 
+	 
 	 
 	 
 	 
