*** empty log message ***

--- a/astrogrid/jes/config/ASTROGRID_jesmessages.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesmessages.properties
@@ -1,3 +1,15 @@
+##################################################################################
+#     B E W A R E!   *   B E W A R E!   *   B E W A R E!  *   B E W A R E!       #
+#                                                                                #
+#     Do not inadvertently introduce white space at the end of a line            #
+#     <<<particularly>>> after a line-end continuation character.                #
+#     e.g. there must be no white space after a backslash continuation...        #
+#                                                                                #
+#     AGJESZ00002=AGJESZ00002:<jes-component-name>: Not initialized. \           #
+#     Perhaps my configuration file is missing.                                  #
+#                                                                                #
+#     YOU HAVE BEEN WARNED!                                                      #
+##################################################################################
 #
 # Messages issued by the JES (Job Entry System) components.
 #
@@ -23,8 +35,8 @@ AGJESZ00005=AGJESZ00005:Message: Message not found in ResourceBundle
 AGJESE00030=:JobController: Failed to parse Job Submission Request.
 AGJESE00040=:JobController: Job submission ultimately failed. See previous messages.
 AGJESI00050=:JobController: Job successfully submitted.
-AGJESE00060=:JobController: Failed to contact AstroGrid message log. 
-AGJESI00070=:JobController: Job status [{0}] job name [{1}] userid [{2}] community [{3}] job id [{4}] 
+AGJESE00060=:JobController: Failed to contact AstroGrid message log.
+AGJESI00070=:JobController: Job status [{0}] job name [{1}] userid [{2}] community [{3}] job id [{4}]
 
 AGJESE00140=:Job: Could not create JobFactory [{0}]
 AGJESE00150=:JobFactory: Could not create Job datasource [{0}]
@@ -66,5 +78,5 @@ AGJESE00750=:JobFactoryImpl: Query not found for Job with URN [{0}] and JobStep 
 AGJESE00760=:JobFactoryImpl: Catalog not found for Query in Job with Job URN [{0}] and JobStep number [{1}]
 AGJESE00770=:JobFactoryImpl: Table not found for Catalog [{0}] in Job with Job URN [{1}] and JobStep number [{2}]
 AGJESE00780=:JobFactoryImpl: Service not found for Catalog [{0}] in Job with Job URN [{1}] and JobStep number [{2}]
-AGJESE00790=:JobFactoryImpl: Unable to complete find request. 
+AGJESE00790=:JobFactoryImpl: Unable to complete find request.
 AGJESE00800=:JobFactoryImpl: Unable to complete update request.
