*** empty log message ***

--- a/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
@@ -1,3 +1,15 @@
+##################################################################################
+#     B E W A R E!   *   B E W A R E!   *   B E W A R E!  *   B E W A R E!       #
+#                                                                                #
+#     Do not inadvertently introduce white space at the end of a line            #
+#     <<<particularly>>> after a line-end continuation character.                #
+#     e.g. there must be no white space after a backslash continuation...        #
+#                                                                                #
+#     AGJESZ00002=AGJESZ00002:DatasetAgent: \                                    #
+#     Not initialized. Perhaps my configuration file is missing.                 #
+#                                                                                #
+#     YOU HAVE BEEN WARNED!                                                      #
+##################################################################################
 #
 # Messages issued by the datacenter components.
 #
@@ -38,7 +50,7 @@ AGDTCE00130=:VOTableFactory: Could not convert query result to VOTable
 AGDTCE00140=:Job: Could not create JobFactory {0}
 AGDTCE00150=:JobFactory: Could not create Job datasource {0}
 AGDTCE00160=:JobFactory: Could not create connection to Job datasource.
-AGDTCE00170=:JobFactory: Unable to create Job from request document. 
+AGDTCE00170=:JobFactory: Unable to create Job from request document.
 AGDTCE00180=:Job: Unable to create Job from request document
 AGDTCE00185=:Job: Error when invoking the JobMonitor.
 AGDTCE00190=:JobFactory: Unable to update Job with jobid {0}
