--- a/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
@@ -1,3 +1,15 @@
+##################################################################################
+#     B E W A R E!   *   B E W A R E!   *   B E W A R E!  *   B E W A R E!       #
+#                                                                                #
+#     Do not inadvertently introduce white space at the end of a line            #
+#     <<<particularly>>> after a line-end continuation character.                #
+#     e.g. there must be no white space after a backslash continuation...        #
+#                                                                                #
+#     SUBMIT_JOB_RESPONSE.TEMPLATE= \                                            #
+#     <?xml version='1.0' encoding='UTF8'?> \                                    #
+#                                                                                #
+#     YOU HAVE BEEN WARNED!                                                      #
+##################################################################################
 #
 # Each datacenter is configured by setting properties within this file.
 #
@@ -95,7 +107,7 @@ MYSPACE.MANAGER.REQUEST_TEMPLATE= \
         <jobID>{2}</jobID> \
         <fileLocation>{3}</fileLocation> \
     </elements> \
-</request> 
+</request>
 
 
 #
@@ -111,7 +123,7 @@ JOB.TABLENAME=JOB
 # JobMonitor request template
 #
 JOB.MONITOR.REQUEST_TEMPLATE= \
-<?xml version = "1.0" encoding = "UTF8"?> \
+<?xml version="1.0" encoding="UTF8"?> \
 <job name="{0}" userid="{1}" community="{2}" jobURN="{3}" time="{4}" > \
    <jobstep name="{5}" stepNumber="{6}" status="{7}"/> \
 </job>
@@ -144,4 +156,3 @@ USNOB.USNOB.B1STAR=B1STAR
 USNOB.USNOB.R1STAR=R1STAR
 USNOB.USNOB.B2STAR=B2STAR
 USNOB.USNOB.R2STAR=R2STAR
-
