--- a/astrogrid/portalB/build.xml
+++ b/astrogrid/portalB/build.xml
@@ -2,10 +2,13 @@
 <!--+
     | <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/portalB/Attic/build.xml,v $</cvs:source>
     | <cvs:date>$Author: dave $</cvs:date>
-    | <cvs:author>$Date: 2003/06/17 15:17:34 $</cvs:author>
-    | <cvs:version>$Revision: 1.2 $</cvs:version>
+    | <cvs:author>$Date: 2003/06/17 15:40:15 $</cvs:author>
+    | <cvs:version>$Revision: 1.3 $</cvs:version>
     | <cvs:log>
     | $Log: build.xml,v $
+    | Revision 1.3  2003/06/17 15:40:15  dave
+    | Fixed missing libraries in build sequence
+    |
     | Revision 1.2  2003/06/17 15:17:34  dave
     | Added links to live MySpace, including initial XML parser for lookup results
     |
@@ -140,6 +143,11 @@
 		<!-- Call a target in the tomcat.xml ant file -->
 		<ant antfile="${project.home}/src/ant/tomcat.xml" target="tomcat.init"/>
 	</target>
+
+	<!-- Tomcat libraries for servlets -->
+	<path id="tomcat.servlet.classpath">
+		<pathelement location="${tomcat.home}/common/lib/servlet.jar"/>
+	</path>
 
 	<!-- Define the Tomcat manager tasks -->
 	<target name="tomcat.tasks" depends="">
@@ -720,6 +728,8 @@
 				<pathelement path="build/myspace/live/client/classes"/>
 				<!-- The Axis libraries -->
 				<path refid="axis.classpath"/>
+				<!-- Tomcat libraries for servlets -->
+				<path refid="tomcat.servlet.classpath"/>
 			</classpath>
 		</javac>
 	</target>
@@ -840,14 +850,26 @@
 		    | Rebuild our mock MySpace service
 		    | This re-builds the mock MySpace service from clean and then deploys it as a WebService in Axis.
 		    +-->
+		<!-- No longer using mock service
 		<antcall target="myspace.service.REBUILD"/>
+		-->
 		<!--+
 		    | Rebuild our MySpace client code.
 		    | This re-builds the MySpace client code from clean.
 		    | It uses the Wsdl2Java task to re-genereta the client stubs from the MySpace WebService.
 		    | So it needs to have the the MySpace service installed and running in Axis.
 		    +-->
+		<!-- No longer using mock service
 		<antcall target="myspace.client.REBUILD"/>
+		-->
+
+		<!--+
+		    | Rebuild our MySpace client code.
+		    | This re-builds the MySpace client code from clean.
+		    | It uses the Wsdl2Java task to re-genereta the client stubs from the live MySpace WebService.
+		    +-->
+		<antcall target="MYSPACE.CLIENT"/>
+
 		<!--+
 		    | Rebuild our portal code.
 		    | This re-builds the portal code from clean.
@@ -1056,7 +1078,7 @@
 	    | This just check that calling happyaxis.jsp responds, not the content.
 	    | It would be nice to use something like HttpUnit to check that Axis really is happy.
 	    +-->
-	<target name="myspace.wait" depends="">
+	<target name="MYSPACE.wait" depends="">
 		<echo message=""/>
 		<echo message="Waiting for Axis webapp ...."/>
 		<echo message="URL : ${myspace.server}/axis/happyaxis.jsp"/>
@@ -1076,7 +1098,7 @@
 		<!-- Create our client directory -->
 		<mkdir dir="build/myspace/live/client/java"/>
 		<!-- Wait for the Axis service -->
-		<antcall target="myspace.wait"/>
+		<antcall target="MYSPACE.wait"/>
 		<!-- Generate our client stubs -->
 		<axis.wsdl2java
 			verbose="true"
@@ -1121,7 +1143,7 @@
 	    +-->
 	<target name="MYSPACE.client.junit" depends="MYSPACE.client.javac">
 		<!-- Wait for the Axis service -->
-		<antcall target="myspace.wait"/>
+		<antcall target="MYSPACE.wait"/>
 		<!-- Create the reports directory -->
 		<mkdir dir="build/myspace/live/client/junit"/>
 		<!-- Run the JUnit tests -->
